# 10-ac-week-00

./: Makefile  pyproject.toml
notebooks/: parse_slack_data.ipynb
src/: __init__.py  loader.py  utils.py
