[tool.poetry]
name = "10-ac-week-00"
version = "0.1.0"
description = "this is the week one assignment"
authors = ["Habtamu Bogale <abubogale342@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

# Other dependencies go here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
